# BigO

./: .gitmodules  README.md  docker-compose.yml
analyzer/: Dockerfile  app.py  sample-parser-output.json
frontend/: Dockerfile  app.py
frontend/templates/: index.html
parser-c/: CMakeLists.txt  Dockerfile  http.c  http.h  json.c  json.h  main.c  parse.c  parse.h
